spring-error-usage/src/main/java/com/example/error/servlet/NotAllowException.java
package com.example.error.servlet;

public class NotAllowException extends RuntimeException {
    public NotAllowException() {
        super();
    }
}